--- a/PI-FrontEnd/src/routes/modules/myBookings.module.css
+++ b/PI-FrontEnd/src/routes/modules/myBookings.module.css
@@ -55,6 +55,7 @@
   gap: 1.6rem;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-bottom: 90px;
 }
 
 .each_reservation {
@@ -88,18 +89,18 @@
   cursor: pointer;
 }
 
-.info_button:hover{
+.info_button:hover {
   transform: scaleX(1.08) scaleY(1.08);
   color: var(--bg-color-secundary);
 }
 
-.range_date_text{
+.range_date_text {
   padding: 0.4rem 2.5%;
 }
 
-.cont_checking{
+.cont_checking {
   background-color: var(--bg-color-primary);
-  background-image: url('/images/constellation.png');
+  background-image: url("/images/constellation.png");
   background-size: cover;
   background-repeat: no-repeat;
   image-orientation: 180deg;
@@ -107,14 +108,13 @@
   width: 100vw;
 }
 
-.cont_checking p{
+.cont_checking p {
   color: #fff;
-padding: 1rem;
-font-size: large;
-text-align: center;
-font-weight: bold;
+  padding: 1rem;
+  font-size: large;
+  text-align: center;
+  font-weight: bold;
 }
-
 
 @media (min-width: 760px) {
   .sub_header_1 button {
@@ -124,5 +124,9 @@ font-weight: bold;
       rgb(214, 209, 209) 0%,
       rgba(211, 211, 211, 0.8603816526610644) 100%
     );
+  }
+
+  .cont_reserved_cars {
+    margin-bottom: 0;
   }
 }
